[gd_scene load_steps=56 format=3 uid="uid://ctftvg83q0ap5"]

[ext_resource type="Script" path="res://scripts/Entities/player.gd" id="1_r2lvk"]
[ext_resource type="Script" path="res://scripts/sword_slash.gd" id="2_x0ei6"]
[ext_resource type="Texture2D" uid="uid://dtev2q5avpadb" path="res://sprites/Entities/Player/player.png" id="3_w1x57"]
[ext_resource type="Texture2D" uid="uid://cmmftfvhacngw" path="res://sprites/Swipe Effect/green_slash/SP301_05.png" id="5_ex26q"]
[ext_resource type="Texture2D" uid="uid://dxymgv3fjwoq6" path="res://sprites/Swipe Effect/green_slash/SP301_04.png" id="6_gtq3g"]
[ext_resource type="Texture2D" uid="uid://ci5wjtj0lktui" path="res://sprites/Swipe Effect/green_slash/SP301_03.png" id="7_ko3nk"]
[ext_resource type="PackedScene" uid="uid://evtep5rqp3ve" path="res://player_attack_QTE/qte.tscn" id="8_iuh4x"]
[ext_resource type="Texture2D" uid="uid://q34c8jgx517r" path="res://sprites/Swipe Effect/green_slash/SP301_02.png" id="8_lk5uo"]
[ext_resource type="Texture2D" uid="uid://cscu53v68f4m3" path="res://sprites/Swipe Effect/green_slash/SP301_01.png" id="9_ls5bf"]
[ext_resource type="PackedScene" uid="uid://cnht5wav7xc1s" path="res://scenes/sword_slash.tscn" id="10_183k2"]
[ext_resource type="AudioStream" uid="uid://5s5ctkskxmnq" path="res://sounds/sfx/slash.ogg" id="11_ba2qx"]
[ext_resource type="Texture2D" uid="uid://d4agdq56wc6bj" path="res://sprites/Coin/GoldCoinSpinning.png" id="12_lhmwi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ek2va"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ex26q")
}, {
"duration": 1.0,
"texture": ExtResource("6_gtq3g")
}, {
"duration": 1.0,
"texture": ExtResource("7_ko3nk")
}, {
"duration": 1.0,
"texture": ExtResource("8_lk5uo")
}, {
"duration": 1.0,
"texture": ExtResource("9_ls5bf")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rpq0h"]
radius = 16.0

[sub_resource type="PackedScene" id="PackedScene_4amne"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1, 0, 14, 13, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Sword", "y_sort_enabled", "collision_layer", "script", "attack", "Area2D", "Animation", "sprite_frames", "autoplay", "frame_progress", "AnimatedSprite2D", "CollisionShape2D", "shape", "_on_animation_animation_looped", "animation_looped"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 5, 0, -1, 3, 1, 0, 2, 1, 3, 2, 1, 4, 0, 0, 10, 6, -1, 3, 7, 3, 8, 4, 9, 5, 0, 0, 0, 11, 11, -1, 1, 12, 6, 0),
"variants": [true, 2, ExtResource("2_x0ei6"), SubResource("SpriteFrames_ek2va"), "default", 0.336454, SubResource("CircleShape2D_rpq0h")],
"version": 3
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_38v6o"]
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_65n6a"]

[sub_resource type="Animation" id="Animation_0itb2"]
resource_name = "Idle_down"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_w6rsc"]
resource_name = "Idle_left"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [48, 49]
}

[sub_resource type="Animation" id="Animation_ttf6l"]
resource_name = "Idle_right"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_nh0ge"]
resource_name = "Idle_up"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_lnxhn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordSlash:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_5321q"]
resource_name = "attack_down"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordSlash/Animation:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.3, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordSlash/Animation:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordSlash/Animation:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordSlash:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SwordSlash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7rbsn"]
resource_name = "attack_left"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordSlash/Animation:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.3, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordSlash/Animation:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordSlash/Animation:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordSlash:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SwordSlash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3an7c"]
resource_name = "attack_right"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordSlash/Animation:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.3, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordSlash/Animation:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordSlash/Animation:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordSlash:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SwordSlash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yrp74"]
resource_name = "attack_up"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordSlash/Animation:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.3, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordSlash/Animation:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordSlash/Animation:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordSlash:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SwordSlash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jhyy7"]
resource_name = "move_down"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_xlug0"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_5kmmo"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_3u5sc"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sr10y"]
_data = {
"Idle_down": SubResource("Animation_0itb2"),
"Idle_left": SubResource("Animation_w6rsc"),
"Idle_right": SubResource("Animation_ttf6l"),
"Idle_up": SubResource("Animation_nh0ge"),
"RESET": SubResource("Animation_lnxhn"),
"attack_down": SubResource("Animation_5321q"),
"attack_left": SubResource("Animation_7rbsn"),
"attack_right": SubResource("Animation_3an7c"),
"attack_up": SubResource("Animation_yrp74"),
"move_down": SubResource("Animation_jhyy7"),
"move_left": SubResource("Animation_xlug0"),
"move_right": SubResource("Animation_5kmmo"),
"move_up": SubResource("Animation_3u5sc")
}

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_0om2p"]
graph_offset = Vector2(-181.333, 18.6667)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u5xgq"]
animation = &"Idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w0qr7"]
animation = &"Idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_10ofk"]
animation = &"Idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ucrd6"]
animation = &"Idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5wire"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u5xgq")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_w0qr7")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_10ofk")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ucrd6")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ugb3"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dvqbm"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_18itq"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ximd8"]
animation = &"attack_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_l68d6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5ugb3")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_dvqbm")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_18itq")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ximd8")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4omun"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_277wx"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6g23j"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qh1x5"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bhoof"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4omun")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_277wx")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6g23j")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_qh1x5")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gpoy3"]
reset = false
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e4oc"]
advance_mode = 2
advance_expression = "input_direction.x != 0 or input_direction.y != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x1cyv"]
advance_mode = 2
advance_expression = "input_direction.x == 0 and input_direction.y == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sdehg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_latho"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_i5hsu"]
states/BlendTree/node = SubResource("AnimationNodeBlendTree_0om2p")
states/BlendTree/position = Vector2(493.667, 271.333)
states/End/position = Vector2(924, 129)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_5wire")
states/Idle/position = Vector2(616, 129)
states/Mele/node = SubResource("AnimationNodeBlendSpace2D_l68d6")
states/Mele/position = Vector2(616.222, 263.333)
states/Start/position = Vector2(459, 129)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_bhoof")
states/Walk/position = Vector2(784, 129.667)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_gpoy3"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_1e4oc"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_x1cyv"), "Mele", "Idle", SubResource("AnimationNodeStateMachineTransition_sdehg"), "Mele", "Walk", SubResource("AnimationNodeStateMachineTransition_latho")]
graph_offset = Vector2(-15, -12)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_6h6sv"]

[sub_resource type="LabelSettings" id="LabelSettings_r8v2f"]
font_size = 32

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("slash_sound") groups=["Player"]]
z_index = 3
y_sort_enabled = true
collision_layer = 2
collision_mask = 9
script = ExtResource("1_r2lvk")
swing_animation = SubResource("PackedScene_4amne")
slash_sound = NodePath("SlashSound")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_w1x57")
hframes = 16
vframes = 14

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="qte" parent="." instance=ExtResource("8_iuh4x")]
z_index = 1
qte_reset_timer = 5.0
qte_timer = 5.0

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_38v6o")

[node name="SwordSlash" parent="." instance=ExtResource("10_183k2")]
visible = false
position = Vector2(0, 10)
monitorable = false

[node name="Animation" parent="SwordSlash" index="0"]
autoplay = ""
frame = 4
frame_progress = 0.0
flip_v = true

[node name="HealthChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="HealthChecker"]
shape = SubResource("CapsuleShape2D_65n6a")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sr10y")
}

[node name="AnimatorTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_i5hsu")
anim_player = NodePath("../Animator")
advance_expression_base_node = NodePath("..")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_6h6sv")
parameters/Idle/blend_position = Vector2(0.00417709, 0.0133333)
parameters/Mele/blend_position = Vector2(-0.000825107, -1.00447)
parameters/Walk/blend_position = Vector2(-0.00250626, 0.00666666)

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ba2qx")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
self_modulate = Color(0.972549, 0.407843, 0, 1)
offset_left = 544.0
offset_top = 256.0
offset_right = 736.0
offset_bottom = 288.0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0

[node name="Control" type="Control" parent="UI/MarginContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(32, 8)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 751.0
grow_vertical = 2
texture = ExtResource("12_lhmwi")
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="UI/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x 1"
label_settings = SubResource("LabelSettings_r8v2f")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="HealthChecker" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]

[editable path="SwordSlash"]
